Fix selection of path segments by clicking on them

There were two problems in segment selection algorithm:

1) It didn't use KoToolBase::handleGrabRect() for fetching grab
   distance, therefore it was not consistent with the distance
   we use for other actions.

2) KoPathSegment::nearestPoint() was filtering the final roots
   incorrectly. When searching for a point with nearest distance
   it was comparing the value with the **previous** point, but not
   the **minimal** one. Therefore, incorrect solution was returned.

BUG:381253