libs/flake/tools/KoPathTool.cpp
@@ -859,12 +859,10 @@ void KoPathTool::mouseDoubleClickEvent(KoPointerEvent *event)
 KoPathTool::PathSegment* KoPathTool::segmentAtPoint(const QPointF &point)
 {
     Q_D(KoToolBase);
-    const int clickProximity = 5;
 
-    // convert click proximity to point using the current zoom level
-    QPointF clickOffset = d->canvas->viewConverter()->viewToDocument(QPointF(clickProximity, clickProximity));
     // the max allowed distance from a segment
-    const qreal maxSquaredDistance = clickOffset.x()*clickOffset.x();
+    const QRectF grabRoi = handleGrabRect(point);
+    const qreal distanceThreshold = 0.5 * KisAlgebra2D::maxDimension(grabRoi);
 
     QScopedPointer<PathSegment> segment(new PathSegment);
 
@@ -874,23 +872,25 @@ KoPathTool::PathSegment* KoPathTool::segmentAtPoint(const QPointF &point)
             continue;
 
         // convert document point to shape coordinates
-        QPointF p = shape->documentToShape(point);
+        const QPointF p = shape->documentToShape(point);
         // our region of interest, i.e. a region around our mouse position
-        QRectF roi(p - clickOffset, p + clickOffset);
+        const QRectF roi = shape->documentToShape(grabRoi);
 
-        qreal minSqaredDistance = HUGE_VAL;
+        qreal minDistance = std::numeric_limits<qreal>::max();
+
         // check all segments of this shape which intersect the region of interest
-        QList<KoPathSegment> segments = shape->segmentsAt(roi);
+        const QList<KoPathSegment> segments = shape->segmentsAt(roi);
+
         foreach (const KoPathSegment &s, segments) {
-            qreal nearestPointParam = s.nearestPoint(p);
-            QPointF nearestPoint = s.pointAt(nearestPointParam);
-            QPointF diff = p - nearestPoint;
-            qreal squaredDistance = diff.x()*diff.x() + diff.y()*diff.y();
+            const qreal nearestPointParam = s.nearestPoint(p);
+            const QPointF nearestPoint = s.pointAt(nearestPointParam);
+            const qreal distance = kisDistance(p, nearestPoint);
+
             // are we within the allowed distance ?
-            if (squaredDistance > maxSquaredDistance)
+            if (distance > distanceThreshold)
                 continue;
             // are we closer to the last closest point ?
-            if (squaredDistance < minSqaredDistance) {
+            if (distance < minDistance) {
                 segment->path = shape;
                 segment->segmentStart = s.first();
                 segment->positionOnSegment = nearestPointParam;
